Add a /v2beta handler using the V2 Locator
